修正轰龙套数据

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -237,3 +237,16 @@ footer{
 		}
 	}
 }
+
+.result{
+	font-size: 1.2rem;
+	height: 0.9rem;
+	border-bottom: 1px solid @i-color;
+	color: @i-color;
+	margin: 5px 0 1.9rem 0;
+	text-align: center;
+	span{
+		margin-top: -0.5em;
+		background-color: @bg-color;
+	}
+}
